# puterra

./: .gitignore  Cargo.toml  README.md
data/: settings.example.json  settings.json  share_keys.json
data/public/: notes.txt
data/users/admin/: interest_calculator_v2.py
data/users/admin/tools/: interest.json
data/users/guest/: Slovenya.txt
public/: index.html  index.html.bak  patch.js
src/: main.rs
