[package]
name = "puterra"
version = "1.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json", "blocking"] }
regex = "1"
printpdf = { version = "0.7", features = ["embedded_images"] }
actix-multipart = "0.6"
futures = "0.3"
image = "0.24"
urlencoding = "2.1"
resvg = "0.44"
tokio-stream = "0.1"
zip = { version = "2", features = ["deflate"] }
cron = "0.12"
